# VoltPilot

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  main.c
main/app/: app_start.c  app_start.h
main/common/: vp_board.h  vp_types.h
main/drives/: epd_2in13.c  epd_2in13.h
main/middle/: adc_service.c  adc_service.h  ai_rs485_service.c  ai_rs485_service.h  app_state_service.c  app_state_service.h  bms_protocol.c  bms_protocol.h  bms_service.c  bms_service.h  board_service.c  board_service.h  diag_service.c  diag_service.h  display_service.c  epd_ui_font.c  epd_ui_renderer.c  fault_service.c  fault_service.h  stc_protocol.c  stc_service.c  stc_service.h  ui_service.c  ui_service.h  watchdog_service.c  watchdog_service.h
main/middle/communication/: ai_rs485_health.c  ai_rs485_health.h  ai_rs485_service.c  ai_rs485_service.h  bms_protocol.h  bms_service.c  stc_protocol.h  stc_service.c
main/middle/control/: app_state_service.c  app_state_service.h  fault_service.c  fault_service.h
main/middle/diagnostics/: diag_service.c  diag_service.h  runtime_history.c  runtime_history.h  usb_diag_command.c  usb_diag_command.h  usb_diag_service.c  usb_diag_service.h
main/middle/display/: display_service.c  display_service.h  epd_ui_font.c  epd_ui_font.h  epd_ui_renderer.c  epd_ui_renderer.h  epd_ui_trigger.c  epd_ui_trigger.h  ui_service.c
main/middle/hardware/: board_service.c
scripts/: build_function_inventory.mjs  check_main_source_size.py
tests/: render_epd_ui_preview.c  test_ai_rs485_health.c  test_board_output_sync.py  test_display_demo_profile.py  test_epd_ui_font_subset.py  test_epd_ui_renderer.c  test_epd_ui_trigger.c  test_feature_pruning.py  test_runtime_history.c  test_runtime_history_integration.py  test_usb_diag_command.c
