idf_component_register(
    SRCS
        "main.c"
        "app/app_start.c"
        "middle/adc_service.c"
        "middle/ai_rs485_service.c"
        "middle/app_state_service.c"
        "middle/bms_protocol.c"
        "middle/bms_service.c"
        "middle/board_service.c"
        "middle/diag_service.c"
        "middle/display_service.c"
        "middle/epd_ui_font.c"
        "middle/epd_ui_renderer.c"
        "middle/epd_ui_trigger.c"
        "middle/fault_service.c"
        "middle/stc_protocol.c"
        "middle/stc_service.c"
        "middle/ui_service.c"
        "middle/watchdog_service.c"
        "drives/epd_2in13.c"
    INCLUDE_DIRS
        "."
        "app"
        "middle"
        "drives"
        "common"
    REQUIRES
        esp_driver_gpio
        esp_driver_spi
        esp_driver_uart
        esp_driver_ledc
        esp_adc
        esp_app_format
        esp_system
        heap
        nvs_flash
)
