idf_component_register(
    SRCS
        "main.c"
        "app/app_start.c"
        "middle/acquisition/adc_service.c"
        "middle/communication/ai_rs485_service.c"
        "middle/communication/ai_rs485_health.c"
        "middle/communication/bms_protocol.c"
        "middle/communication/bms_service.c"
        "middle/communication/stc_protocol.c"
        "middle/communication/stc_service.c"
        "middle/control/app_state_service.c"
        "middle/control/fault_service.c"
        "middle/control/watchdog_service.c"
        "middle/diagnostics/diag_service.c"
        "middle/diagnostics/runtime_history.c"
        "middle/diagnostics/usb_diag_command.c"
        "middle/diagnostics/usb_diag_service.c"
        "middle/display/display_service.c"
        "middle/display/epd_ui_font.c"
        "middle/display/epd_ui_renderer.c"
        "middle/display/epd_ui_trigger.c"
        "middle/display/ui_service.c"
        "middle/hardware/board_service.c"
        "drives/epd_2in13.c"
    INCLUDE_DIRS
        "."
        "app"
        "middle"
        "middle/acquisition"
        "middle/communication"
        "middle/control"
        "middle/diagnostics"
        "middle/display"
        "middle/hardware"
        "drives"
        "common"
    REQUIRES
        esp_driver_gpio
        esp_driver_spi
        esp_driver_uart
        esp_driver_ledc
        esp_driver_usb_serial_jtag
        esp_adc
        esp_app_format
        esp_system
        heap
        nvs_flash
)
